MODINVUP-126 migrate to vertx5 (#129)
* MODINVUP-125 upgrade Vertx to v.5